# dev-insights-tips

./: .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  404.html  CLAUDE.md  MIGRATION_GUIDE.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  search.json  sitemap.xml
.github/workflows/: delete-spam-issues.yml  push_gh-deploy.yml  update_pre-commit_hooks.yml  update_requirements_after_dependabot.yml  update_version_and_release.yml
application/: index.html
application/inkscape/: index.html
application/inkscape/inkscape-tips/: index.html
application/obsidian/: index.html
application/obsidian/obsidian-tips/: index.html
application/shortcuts/: index.html
application/vscode/: index.html
application/vscode/extention-tips/: index.html
application/vscode/setting-tips/: index.html
application/workflowy/: index.html
application/workflowy/workflowy-tips/: index.html
aws/: index.html
aws/aws_cli-tips/: index.html
aws/dynamodb/: index.html
aws/dynamodb/dynamodb-local/: index.html
ci/: run_mkdocs_cmd.py  update_pyproject_version.py
command-line-tool/: index.html
command-line-tool/git/git-tips/: index.html
command-line-tool/vi/vi-tips/: index.html
database/: index.html
database/dynamodb/: index.html
database/mariadb/: index.html
database/mongodb/: index.html
database/mongodb/install-mongodb/: index.html
database/mongodb/mongodb-compass/: index.html
database/mongodb/mongosh/: index.html
database/mongodb/pymongo/: index.html
development/: index.html
development/cloud/: index.html
development/cloud/aws/: index.html
development/database/: index.html
development/database/dynamodb/: index.html
development/database/mariadb/: index.html
development/database/mongodb/: index.html
development/embedded/: index.html
development/embedded/raspberrypi/: index.html
development/programming/: index.html
development/programming/applescript/: index.html
development/programming/python/: index.html
development/tools/: index.html
development/tools/design/: index.html
development/tools/document/: index.html
development/tools/editors/: index.html
development/tools/shortcuts/: index.html
development/tools/version-control/: index.html
docs/: index.en.md  index.ja.md  index.md
docs/application/: index.en.md  index.ja.md  index.md
docs/application/inkscape/: inkscape-tips.en.md  inkscape-tips.ja.md  inkscape-tips.md
docs/application/obsidian/: obsidian-tips.en.md  obsidian-tips.ja.md
docs/application/vscode/: extention-tips.en.md  extention-tips.ja.md  extention-tips.md  index.en.md  index.ja.md  setting-tips.en.md  setting-tips.ja.md
docs/application/workflowy/: workflowy-tips.ja.md
docs/command-line-tool/: index.en.md  index.ja.md
docs/database/: index.en.md  index.ja.md  mariadb-tips.en.md  mariadb-tips.ja.md
docs/db_tips/mariadb/: mariadb-tips.md
docs/en/application/: index.md
docs/en/aws/: aws_cli-tips.md  index.md
docs/en/command-line-tool/: index.md
docs/en/database/: index.md
docs/en/markdown/: markdown-tips.md
docs/en/programming-language/: index.md
docs/git/: git-tips.en.md  git-tips.ja.md  index.en.md  index.ja.md
docs/git_tips/: git-tips.md
docs/ja/application/: index.md
docs/ja/aws/: aws_cli-tips.md  index.md
docs/ja/database/: index.md  mariadb-tips.md
docs/ja/raspberrypi/: index.md  raspberrypi-ubuntu-tips.md
docs/markdown/: index.en.md  index.ja.md  index.md  markdown-tips.en.md  markdown-tips.ja.md
docs/markdown_tips/: markdown-tips.md
docs/programming-language/: index.en.md  index.ja.md
docs/programming-language/applescript/: example.ja.md  index.en.md  index.ja.md
docs/python/: dash-plotly-tips.en.md  dash-plotly-tips.ja.md  index.en.md  index.ja.md  mdformat-tips.en.md  mdformat-tips.ja.md  mkdocs-tips.ja.md  post-commit-tips.en.md  post-commit-tips.ja.md  pre-commit-tips.en.md  pre-commit-tips.ja.md  pymysql-tips.en.md  pymysql-tips.ja.md
docs/raspberrypi/: index.en.md  index.ja.md  raspberrypi-ubuntu-tips.en.md  raspberrypi-ubuntu-tips.ja.md
docs/sample/: index.en.md  index.ja.md  index.md  sample-tips.en.md  sample-tips.ja.md
docs/tool_tips/: tool-tips.md
docs/tools/: index.en.md  index.ja.md  tools-tips.en.md  tools-tips.ja.md
docs/vi/: index.en.md  index.ja.md  vi-tips.en.md  vi-tips.ja.md
docs/vi_tips/: vi-tips.md
docs/vscode/: index.en.md  index.ja.md  vscode-tips.en.md  vscode-tips.ja.md
docs/vscode_tips/: vscode-tips.md
en/: index.html
en/application/: index.html
en/application/inkscape/: index.html
en/aws/: index.html
en/command-line-tool/: index.html
en/database/: index.html
en/development/: index.html
en/markdown/: index.html
en/programming-language/: index.html
en/raspberrypi/: index.html
en/tags/: index.html
ja/: index.html
ja/development/: index.html
ja/tags/: index.html
markdown/: index.html
markdown/markdown-tips/: index.html
overrides/: main.html
overrides/partials/: comments.html
programming-language/: index.html
programming-language/applescript/: index.html
programming-language/python/: index.html
raspberrypi/: index.html
raspberrypi/raspberrypi-ubuntu-tips/: index.html
sample/: index.md
sample/sample/: index.ja.md  page1.en.md  page1.ja.md
scripts/: create_post-commit.sh  spam_issue_deleter.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/application/: index.html
site/aws/: index.html
site/command-line-tool/: index.html
site/database/: index.html
site/development/: index.html
site/en/: index.html
site/git/: index.html
site/ja/: index.html
site/markdown/: index.html
site/programming-language/: index.html
site/python/: index.html
site/raspberrypi/: index.html
site/sample/: index.html
site/search/: search_index.json
site/tags/: index.html
site/tools/: index.html
site/vi/: index.html
site/vscode/: index.html
tags/: index.html
(+522 files in other folders)
