[tool.poetry]
authors = ["7rikaz"]
description = "A repository that gathers insights and tips for development. It aims to share information related to programming and development."
license = "MIT"
name = "dev-insights-tips"
package-mode = false
readme = "README.md"
version = "0.1.51"

[tool.poetry.dependencies]
mdformat = "^0.7.22"
mkdocs-glightbox = "^0.5.1"
mkdocs-material = "^9.6.20"
mkdocs-static-i18n = "^1.3.0"
plantuml-markdown = "^3.11.1"
pre-commit = "^4.3.0"
pygments = "^2.19.2"
python = "^3.10"
tomlkit = "^0.13.3"
poetry = "^2.2.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
flake8-pyproject = "^1.2.3"
isort = "^6.0.1"
mypy = "^1.18.1"
ruamel-yaml = "^0.18.15"
ruff = "^0.13.0"
taskipy = "^1.11.0"
poetry-plugin-export = "^1.9.0"
requests = "^2.32.5"

[tool.taskipy.tasks]
black = "poetry run black ci scripts"
flake8 = "poetry run flake8 ci scripts"
isort = "poetry run isort ci scripts"
mkdb = "poetry run mkdocs build --clean"
mkddp = "poetry run mkdocs gh-deploy"
mkds = "poetry run mkdocs serve"
mypy = "poetry run mypy"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]
target-version = "py310"

[tool.ruff.lint]
ignore = ["E402", "E501"]
per-file-ignores = {}
select = ["E", "F", "I"]

[tool.black]
target-version = ['py310']

[tool.isort]

[tool.flake8]
ignore = ["E402", "E501", "W503"]

[tool.mypy]
files = ["ci", "scripts"]
ignore_missing_imports = true
python_version = "3.10"
scripts_are_modules = true
strict = true
warn_return_any = false
