[project]
name = "dev-insights-tips"
version = "0.1.51"
description = "A repository that gathers insights and tips for development. It aims to share information related to programming and development."
authors = [{name = "7rikaz"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "zensical>=0.0.8",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-static-i18n>=1.3.0",
    "plantuml-markdown>=3.11.1",
    "pre-commit>=4.4.0",
    "pygments>=2.19.2",
    "tomlkit>=0.13.3",
    "mdformat>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.11.0",
    "flake8>=7.3.0",
    "flake8-pyproject>=1.2.3",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "ruamel-yaml>=0.18.16",
    "ruff>=0.14.5",
    "taskipy>=1.11.0",
    "requests>=2.32.5",
]

[tool.taskipy.tasks]
black = "black ci scripts"
flake8 = "flake8 ci scripts"
isort = "isort ci scripts"
mkdb = "zensical build --clean"
mkddp = "zensical build --clean && ghp-import -npfm 'Deploy site' site"
mkds = "zensical serve"
mypy = "mypy"
build = "zensical build"
serve = "zensical serve"
deploy = "zensical build --clean && ghp-import -npfm 'Deploy site' site"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dev_insights_tips"]

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]
target-version = "py310"

[tool.ruff.lint]
ignore = ["E402", "E501"]
per-file-ignores = {}
select = ["E", "F", "I"]

[tool.black]
target-version = ['py310']

[tool.isort]

[tool.flake8]
ignore = ["E402", "E501", "W503"]

[tool.mypy]
files = ["ci", "scripts"]
ignore_missing_imports = true
python_version = "3.10"
scripts_are_modules = true
strict = true
warn_return_any = false
